add tax/tips
